fixed too large table on smartphone

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,6 @@ h4{
 }
 body {
     margin: 0;
-    font-size: 18px;
 }
 
 
@@ -175,6 +174,7 @@ body {
 .ersterAbschnitt{
     background-color: rgb(199, 253, 201);
     padding: 8px;
+    font-size: 18px;
 }
 .zweiterAbschnitt{
     background-color: rgb(191, 248, 255);
@@ -187,6 +187,7 @@ body {
 .rennkalender {
     margin-bottom: 40px;
     line-height: 150%;
+    font-size: 18px;
 }
 .rennkalender a{
     color: rgb(0, 0, 0);
